全量更新文档，并更新依赖获取等